# helgobox

./: .env.example  .gitattributes  .gitignore  .gitmodules  .tokeignore  ARCHITECTURE.adoc  ARCHITECTURE.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile.toml  README.adoc  README.md  about.hbs  about.html  about.toml  build-linux-complete.sh  build.rs  deny.toml  dist.rs  reaboot.json  regenerate-doc-diagrams.sh  rustfmt.toml  test.dot
api/: Cargo.toml
api/src/: lib.rs  root.rs  util.rs
api/src/bindings/: mod.rs
api/src/persistence/: compartment.rs  controller.rs  glue.rs  group.rs  instance.rs  mapping.rs  mod.rs  parameter.rs  preset.rs  root.rs  session.rs  source.rs  target.rs
api/src/runtime/: global_info_event.rs  info_event.rs  instance_info_event.rs  licensing.rs  mod.rs  preset.rs  reaper.rs  root.rs
api/src/schema/: compartment.rs  glue.rs  group.rs  mapping.rs  mod.rs  parameter.rs  realearn.template.yaml  root.rs  session.rs  source.rs  target.rs
base/: Cargo.toml
base/src/: approx_f64.rs  byte_pattern.rs  channels.rs  default_util.rs  file_util.rs  global.rs  global_macros.rs  hash_util.rs  lib.rs  metrics_util.rs  mutex_util.rs  panic_util.rs  peak_util.rs  regex_util.rs  replenishment_channel.rs  serde_json_util.rs  small_ascii_string.rs  sound.rs  sound_player.rs  tracing_util.rs  trafficker.rs  validation_util.rs
base/src/mouse/: api.rs  enigo.rs  mod.rs
eel2/: Cargo.toml  build.rs
eel2/src/: lib.rs  wrapper.hpp
egui/: Cargo.toml
egui/src/: lib.rs
expression/: Cargo.toml
expression/benches/: expression-evaluation.rs
expression/src/: api.rs  lib.rs
expression/src/eel2_impl/: mod.rs
expression/src/fasteval_impl/: mod.rs
expression/src/lua_impl/: mod.rs
extension/: Cargo.toml
extension/src/: lib.rs
license-api/: Cargo.toml
license-api/src/: lib.rs  persistence.rs  runtime.rs
main/: Cargo.toml  build.rs
main/src/: lib.rs
main/src/application/: actions.rs  activation_condition_model.rs  aliases.rs  app.rs  auto_units.rs  clip_matrix_handler.rs  compartment_model.rs  compartment_preset.rs  conditional_activation_model.rs  controller.rs  controller_preset.rs  group_model.rs  instance_model.rs  main_preset.rs  mapping_extension_model.rs  mapping_model.rs  mapping_model_data.rs  midi_source_model.rs  midi_util.rs  mod.rs  mode_model.rs  mode_model_data.rs  parameter_data.rs  preset.rs  preset_link.rs  primary_preset.rs  props.rs  session.rs  session_data.rs  session_manager.rs  session_state.rs  source_model.rs  source_model_data.rs  target_model.rs  target_model_data.rs  unit_model.rs
main/src/base/: allocator.rs  bindings.rs  channel_util.rs  channels.rs  clone_as_default.rs  default_util.rs  eel.rs  file_util.rs  future_util.rs  hash_util.rs  metrics_util.rs  mod.rs  mutex_util.rs  notification.rs  property.rs  scheduling.rs  send_or_sync_whatever.rs  tracing_util.rs  wrapper.hpp
main/src/core/: bindings.rs  default_util.rs  eel.rs  global.rs  global_macros.rs  hash_util.rs  mod.rs  moving_average_calculator.rs  property.rs  scheduling.rs  toast.rs  wrapper.hpp
main/src/domain/: accelerator.rs  aliases.rs  audio_hook.rs  backbone.rs  backbone_state.rs  byte_pattern.rs  clip_slot.rs  conditional_activation.rs  conditional_activation_model.rs  control_event.rs  control_surface.rs  device_change_detector.rs  domain_global.rs  eel_midi_source_script.rs  eel_transformation.rs  eventing.rs  exclusivity.rs  feedback_buffer.rs  feedback_collector.rs  flexible_midi_source_script.rs  global.rs  global_audio_state.rs  group.rs  hex.rs  info_event.rs  instance.rs  instance_state.rs  internal_info_event.rs  io.rs  key_source.rs  lua_feedback_script.rs  lua_midi_source_script.rs  lua_module_container.rs  lua_script_commons.rs  lua_support.rs  main_processor.rs  mapping.rs  mapping_model.rs  mapping_snapshot.rs  midi_clock_calculator.rs  (+44 more)
main/src/infrastructure/: mod.rs
main/templates/: companion-app-setup.html  projection-setup.html
playtime-api/: Cargo.toml
playtime-api/src/: lib.rs
playtime-api/src/persistence/: mod.rs  serialization.rs
playtime-api/src/runtime/: app.rs  control_unit.rs  mod.rs  reaper.rs
playtime-clip-engine/: Cargo.toml
playtime-clip-engine/src/: conversion_util.rs  file_util.rs  lib.rs  matrix.rs  metrics_util.rs  midi_util.rs  mutex_util.rs  real_time_matrix.rs  source_util.rs  timeline.rs  tracing_util.rs
playtime-clip-engine/src/application/: clip_content.rs  clip_data.rs  column.rs  matrix.rs  mod.rs
playtime-clip-engine/src/base/: clip.rs  clip_edit_session.rs  clip_manifestation.rs  column.rs  history.rs  matrix.rs  mod.rs  row.rs  slot.rs
playtime-clip-engine/src/main/: clip.rs  clip_content.rs  clip_data.rs  column.rs  history.rs  matrix.rs  mod.rs  row.rs  slot.rs  source.rs  source_util.rs
playtime-clip-engine/src/processing/: buffer.rs  clip.rs  column_source.rs  mod.rs  real_time_matrix.rs  slot.rs
playtime-clip-engine/src/proto/: clip_engine.rs  clip_engine_ext.rs  hub.rs  mod.rs  playtime_clip_engine.rs  senders.rs  service.rs
playtime-clip-engine/src/rt/: audio_hook.rs  buffer.rs  clip.rs  column.rs  column_source.rs  fx_hook.rs  matrix.rs  mod.rs  real_time_matrix.rs  rt_clip.rs  rt_column.rs  rt_matrix.rs  rt_slot.rs  schedule_util.rs  slot.rs  source_util.rs  tempo_util.rs
playtime-clip-engine/src/supplier/: cache.rs  fade_util.rs  looper.rs  mod.rs  resampler.rs  section.rs  time_stretcher.rs
pot/: Cargo.toml
pot-browser/: Cargo.toml
pot-browser/src/: lib.rs  pot_browser_panel.rs
pot/src/: api.rs  escape_catcher.rs  lib.rs  nks.rs  plugin_id.rs  plugins.rs  pot_database.rs  preset_crawler.rs  preview_recorder.rs  provider_database.rs  worker.rs
pot/src/providers/: defaults.rs  directory.rs  ini.rs  komplete.rs  mod.rs  projects.rs
swell-ui/: Cargo.toml  build.rs
swell-ui/src/: brush.rs  clipboard.rs  color.rs  device_context.rs  font.rs  lib.rs  macos.rs  macros.rs  menu.rs  string_types.rs  types.rs  units.rs  view.rs  view_manager.rs  win.rs  win_bindings.rs  window.rs  wrapper.hpp
swell-ui/src/menu_tree/: input.rs  (+2 more)
(+1562 files in other folders)
