[workspace]
members = [
    "api",
    "dialogs",
    "macros",
    "playtime-clip-engine",
    "playtime-api",
    "pot",
    "pot-browser",
    "csi",
    "main",
    "rx-util",
    "swell-ui",
    "base",
    # Will probably be excluded from the workspace in future
    "main/lib/helgoboss-learn"
]

[workspace.dependencies]
# Own
base = { path = "base" }
pot = { path = "pot" }
pot-browser = { path = "pot-browser" }
reaper-rx = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", features = ["serde"] }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", features = ["serde"] }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
rppxml-parser = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
swell-ui = { path = "swell-ui" }
rx-util = { path = "rx-util" }
playtime-clip-engine = { path = "playtime-clip-engine" }
realearn-api = { path = "api" }
realearn-macros = { path = "macros" }
playtime-api = { path = "playtime-api" }
realearn-csi = { path = "csi" }
helgoboss-learn = { path = "main/lib/helgoboss-learn", features = ["reaper-low"] }
helgoboss-midi = { version = "0.4", features = ["serde", "serde_repr"] }

# 3rd-party
scopeguard = "1.1.0"
rxrust = { git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83" }
indexmap = "1.9.3"
itertools = "0.10.5"
wildmatch = "2.1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
derive_more = "0.99.16"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
enum-iterator = "0.6.0"
enum-map = { version = "2.4.1", features = ["serde"] }
once_cell = "1.4.0"
strum = { version = "0.24", features = ["derive"] }
regex = "1"
walkdir = "2"
either = "1.8.0"
tracing = "0.1.31"
futures = { version = "0.3", default-features = false }
derivative = "2.2.0"
tempfile = "3.1.0"
xxhash-rust = { version = "0.8.6", features = [ "xxh3" ] }
crossbeam-channel = "0.5"
futures-timer = "3.0.2"
metrics = "0.18.0"
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", branch = "master" }
ascii = "1.0"
raw-window-handle = "0.4.2"
winapi = { version = "0.3", features = ["winuser", "uxtheme"] }
bindgen = "0.60.1"
enumflags2 = "0.7.4"
nanoid = "0.3.0"
slug = "0.1.4"
num_enum = "0.5.0"
tonic = "0.9.2"
prost = "0.11.5"
schemars = "0.8.10"
nom = "7.0.0"
semver = { version = "0.9.0", features = ["serde"] }
enumset = "1.0.12"
mlua = { version = "0.6.6", features = ["vendored", "lua54", "serialize", "send"] }
chrono = "0.4.11"
dirs = "5.0.1"
libloading = "0.8"
tokio-stream = { version = "0.1.8", features = ["sync"] }
egui = "0.21.0"
egui_extras = "0.21.0"
egui-toast = "0.6.0"
bytesize = "1.0.1"

[profile.release]
# This is important for having line numbers in bug reports.
debug = 2

[profile.dev-llvm-out-of-memory-fix]
inherits = "dev"
# Lately, i686 Windows builds often fail due to "LLVM ERROR: out of memory".
# Lowering the amount of debug information included in the binary is supposed to fix that.
debug = 1

[profile.release-llvm-out-of-memory-fix]
inherits = "release"
# Lately, i686 Windows builds often fail due to "LLVM ERROR: out of memory".
# Lowering the amount of debug information included in the binary is supposed to fix that.
debug = 1

[patch.crates-io]

# TODO-low-wait
# I absolutely need Flutter to be able to connect with ReaLearn based on a LAN IP address. Without this hack, Flutter
# will fail to connect with a TLSV1_ALERT_DECODE_ERROR. As soon as https://github.com/briansmith/webpki/issues/54 is
# closed and rustls has updated the dependency, we should remove this!
webpki = { git = "https://github.com/helgoboss/webpki.git", branch = "workaround/54-alert-decode-error-0.22.0" }

# Yes! Thanks to the use of axum-server (instead of warp) we don't need this Hyper patch anymore! axum-server seems to
# use lower-level Hyper features and implements a proper graceful shutdown feature on it that allows one to specify a
# timeout. If not all connections are closed until that timeout, it just shuts down forcibly. That's important and
# exactly what we need. We need the server shutdown happen immediately before ReaLearn is unloaded without having to
# force the user to wait for open connections to finish. The following was a temporary hack to make this possible.
# See https://github.com/hyperium/hyper/issues/1885, https://github.com/hyperium/hyper/issues/2386.
# For a moment, I thought that I need to reintroduce this patch for gRPC, which is driven by tonic. Indeed, when using
# tonic's serve_with_shutdown() feature, REAPER doesn't quit until Playtime gRPC client has disconnected :/ But
# fortunately, using the tokio::select! workaround (mentioned in issue 2386) works and *also* closes the ports this
# time! Turns out the same is actually true for axum, so we use select! there as well.
#hyper = { git = "https://github.com/helgoboss/hyper.git", branch = "feature/realearn" }

# TODO-low-wait Wait until https://github.com/RustAudio/vst-rs/issues/184 merged.
vst = { git = "https://github.com/helgoboss/vst-rs.git", branch = "feature/param-props" }
#vst = { path = "../vst-rs" }

# This is for temporary development with local reaper-rs.
#[patch.'https://github.com/helgoboss/reaper-rs.git']
#reaper-high = { path = "../reaper-rs/main/high" }
#reaper-medium = { path = "../reaper-rs/main/medium" }
#reaper-low = { path = "../reaper-rs/main/low" }
#reaper-rx = { path = "../reaper-rs/main/rx" }
#rppxml-parser = { path = "../reaper-rs/main/rppxml-parser" }

## This is for temporary development with local egui-baseview.
#[patch.'https://github.com/helgoboss/egui-baseview.git']
#egui-baseview = { path = "../egui-baseview" }
#
## This is for temporary development with local baseview.
#[patch.'https://github.com/helgoboss/baseview.git']
#baseview = { path = "../baseview" }