[package]
name = "realearn-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[features]
default = []
playtime = ["dep:playtime-api"]

[dependencies]
# For being able to use the API macro
realearn-macros.workspace = true
reaper-low.workspace = true
serde.workspace = true
semver.workspace = true
serde_json.workspace = true
playtime-api = { workspace = true, optional = true }
derive_more.workspace = true
enum-iterator.workspace = true
num_enum.workspace = true
enum-map.workspace = true
enumset = { workspace = true, features = ["serde", "alloc"]}

[dev-dependencies]
# For testing Lua compatibility
mlua.workspace = true
# For generating Luau type definitions from our Rust APIs
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
# For generating Luau type definitions from our Rust APIs
darling = "0.20.3"
# For generating Luau type definitions from our Rust APIs
heck = "0.4.0"