[package]
name = "helgobox-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[features]
default = []

[dependencies]
# For being able to use the API macro
helgobox-macros.workspace = true
reaper-low.workspace = true
serde.workspace = true
semver.workspace = true
serde_json.workspace = true
playtime-api.workspace = true
derive_more.workspace = true
strum.workspace = true
num_enum.workspace = true
enum-map.workspace = true
enumset = { workspace = true, features = ["serde", "alloc"] }
helgoboss-license-api.workspace = true
serde_with.workspace = true

[dev-dependencies]
# For testing Lua compatibility
mlua.workspace = true
# For generating Luau type definitions from our Rust APIs
syn = { workspace = true, features = ["full", "extra-traits"] }
# For generating Luau type definitions from our Rust APIs
darling.workspace = true
# For generating Luau type definitions from our Rust APIs
heck.workspace = true
# For formatting generated Luau Type definitions
stylua = { workspace = true, features = ["luau"] }
anyhow.workspace = true