[package]
name = "base"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
# Own
helgoboss-learn.workspace = true
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-rx.workspace = true
realearn-api.workspace = true
helgoboss-allocator.workspace = true

# 3rd-party
serde.workspace = true
xxhash-rust.workspace = true
walkdir.workspace = true
crossbeam-channel.workspace = true
futures-timer.workspace = true
once_cell.workspace = true
tracing.workspace = true
metrics.workspace = true
ascii.workspace = true
enigo = "0.0.14"
device_query = "1.1.1"
derive_more.workspace = true
slog.workspace = true
either.workspace = true
logos.workspace = true
thiserror.workspace = true