[package]
name = "base"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
# Own
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-rx.workspace = true
helgobox-api.workspace = true

# 3rd-party
serde.workspace = true
serde_json.workspace = true
xxhash-rust.workspace = true
crossbeam-channel.workspace = true
futures-timer.workspace = true
once_cell.workspace = true
tracing.workspace = true
metrics.workspace = true
ascii.workspace = true
enigo.workspace = true
# For getting current mouse state
device_query.workspace = true
derive_more.workspace = true
either.workspace = true
logos.workspace = true
anyhow.workspace = true
thiserror.workspace = true
camino.workspace = true
indexmap.workspace = true
futures.workspace = true
tokio.workspace = true
fragile.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# For not letting device_query panic when macOS accessibility permissions not granted
macos-accessibility-client.workspace = true