[package]
name = "eel2"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
build = "build.rs"

[features]
# Regenerate bindings
generate = []

[build-dependencies]
# For generating bindings
bindgen = "0.52.0"
# For compiling EEL
cc = "1.0.50"

[dev-dependencies]
# For comparing floating point numbers in tests
approx = "0.5.1"