[package]
name = "realearn-egui"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

[dependencies]
egui = "0.19.0"
egui_glow = "0.19.0"
baseview = { git = "https://github.com/RustAudio/baseview.git", features = ["opengl"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
keyboard-types = "0.6.2"
raw-window-handle = "0.4.3"