[package]
name = "helgobox-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
anyhow.workspace = true
base.workspace = true
realearn-api.workspace = true
fragile.workspace = true

[lib]
name = "reaper_helgobox"
crate-type = ["cdylib"]