[package]
name = "helgobox-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-fluent.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-macros.workspace = true
anyhow.workspace = true
base.workspace = true
realearn-api.workspace = true
enumflags2.workspace = true

[lib]
name = "reaper_helgobox"
crate-type = ["cdylib"]