[package]
name = "helgobox-extension"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reaper-fluent.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-macros.workspace = true
anyhow.workspace = true
libloading.workspace = true

[lib]
name = "reaper_helgobox"
crate-type = ["cdylib"]