[package]
name = "helgoboss-license-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true